--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/navigation/mobile_navigation.xml
@@ -43,7 +43,11 @@
         android:id="@+id/nav_contratos"
         android:name="com.giulietta.inmobiliaria.ui.contratos.ContratosFragment"
         android:label="@string/contratos"
-        tools:layout="@layout/fragment_contratos" />
+        tools:layout="@layout/fragment_contratos" >
+        <action
+            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
+            app:destination="@id/detalleContratoFragment" />
+    </fragment>
     <fragment
         android:id="@+id/nav_logout"
         android:name="com.giulietta.inmobiliaria.ui.logout.LogoutFragment"
@@ -52,7 +56,7 @@
     <fragment
         android:id="@+id/detalleInmuebleFragment"
         android:name="com.giulietta.inmobiliaria.ui.inmuebles.DetalleInmuebleFragment"
-        android:label="fragment_detalle_inmueble"
+        android:label="Detalle inmueble"
         tools:layout="@layout/fragment_detalle_inmueble" >
         <action
             android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
@@ -61,7 +65,7 @@
     <fragment
         android:id="@+id/cargarInmuebleFragment"
         android:name="com.giulietta.inmobiliaria.ui.inmuebles.CargarInmuebleFragment"
-        android:label="fragment_cargar_inmueble"
+        android:label="Cargar Inmueble"
         tools:layout="@layout/fragment_cargar_inmueble" >
         <action
             android:id="@+id/action_cargarInmuebleFragment_to_nav_inmuebles"
@@ -70,11 +74,20 @@
     <fragment
         android:id="@+id/cambiarPasswordFragment"
         android:name="com.giulietta.inmobiliaria.ui.perfil.CambiarPasswordFragment"
-        android:label="fragment_cambiar_password"
+        android:label="Cambiar Contraseña"
         tools:layout="@layout/fragment_cambiar_password" >
         <action
             android:id="@+id/action_cambiarPasswordFragment_to_nav_perfil"
             app:destination="@id/nav_perfil" />
+    </fragment>
+    <fragment
+        android:id="@+id/detalleContratoFragment"
+        android:name="com.giulietta.inmobiliaria.ui.contratos.DetalleContratoFragment"
+        android:label="fragment_detalle_contrato"
+        tools:layout="@layout/fragment_detalle_contrato" >
+        <action
+            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
+            app:destination="@id/nav_contratos" />
     </fragment>
 
 
