--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_inquilinos.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_inquilinos.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.inquilinos.InquilinosFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvInmueblesInquilino"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
-
+        />
 </FrameLayout>
