--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/navigation/mobile_navigation.xml
@@ -92,6 +92,9 @@
         <action
             android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
             app:destination="@id/nav_contratos" />
+        <action
+            android:id="@+id/action_detalleContratoFragment_to_pagosFragment"
+            app:destination="@id/pagosFragment" />
     </fragment>
     <fragment
         android:id="@+id/detalleInquilinosFragment"
@@ -101,6 +104,15 @@
         <action
             android:id="@+id/action_detalleInquilinosFragment_to_nav_inquilinos"
             app:destination="@id/nav_inquilinos" />
+    </fragment>
+    <fragment
+        android:id="@+id/pagosFragment"
+        android:name="com.giulietta.inmobiliaria.ui.contratos.PagosFragment"
+        android:label="Pagos"
+        tools:layout="@layout/fragment_pagos" >
+        <action
+            android:id="@+id/action_pagosFragment_to_detalleContratoFragment"
+            app:destination="@id/detalleContratoFragment" />
     </fragment>
 
 
